--- a/tasks/configure-pods-and-containers/containers-and-pods-memory-resources.yaml
+++ b/tasks/configure-pods-and-containers/containers-and-pods-memory-resources.yaml
@@ -54,7 +54,8 @@ spec:
 
 Comment : >
    Motivation for memory requests and limits
-   By configuring memory requests and limits for the Containers that run in your cluster, you can make efficient use of the memory resources available on your cluster's Nodes. 
-   By keeping a Pod's memory request low, you give the Pod a good chance of being scheduled. By having a memory limit that is greater than the memory request, you accomplish two things:
-   - The Pod can have bursts of activity where it makes use of memory that happens to be available.
-   - The amount of memory a Pod can use during a burst is limited to some reasonable amount.
+   a. By configuring memory requests and limits for the Containers that run in your cluster, you can make efficient use of the memory resources available on your cluster's Nodes. 
+   b. By keeping a Pod's memory request low, you give the Pod a good chance of being scheduled. 
+   c. By having a memory limit that is greater than the memory request, you accomplish two things:
+      - The Pod can have bursts of activity where it makes use of memory that happens to be available.
+      - The amount of memory a Pod can use during a burst is limited to some reasonable amount.
